@@ -1,0 +1,3 @@
+(
+ (python-mode . ((python-indent-offset . 4)))
+ )
